# FluidSimCrate

./: Cargo.toml  README.md
configs/: debug.json  single_smoke.json  single_smoke_grid.json  single_smoke_particle.json
src/: boundary.rs  canvas.rs  grid.rs  integration.rs  laplacian_solver.rs  lib.rs  main.rs  parser.rs  render.rs  scene.rs  utils.rs
src/module_demos/: canvas_demo.rs  render_demo.rs
src/scene/: single_smoke.rs
src/scene_examples/: single_smoke_grid_sim.rs  single_smoke_particle_sim.rs  single_smoke_sim.rs
