[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
minifb = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "*"
