[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"
default-run = "sim_main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sim_main"
path = "src/bin/sim_main.rs"

[dependencies]
minifb = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.6"
sprs = "0.11.1"
sprs-ldl = "0.10.0"

[profile.dev]
opt-level = 2
