[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "single_smoke_grid_sim"
path = "src/scene_examples/single_smoke_grid_sim.rs"

[[bin]]
name = "single_smoke_particle_sim"
path = "src/scene_examples/single_smoke_particle_sim.rs"

[[bin]]
name = "canvas_demo"
path = "src/module_demos/canvas_demo.rs"

[[bin]]
name = "parser_demo"
path = "src/module_demos/parser_demo.rs"

[dependencies]
minifb = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.6"
sprs = "0.11.1"
sprs-ldl = "0.10.0"

[profile.dev]
opt-level = 2
